{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 121,
  "lineage": "6c4f3bf8-bd86-8785-02ff-cf70ecf778f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e342d72b12109f91",
            "arn": "arn:aws:ec2:eu-central-1:631156311067:instance/i-061ff76e0cf257d76",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061ff76e0cf257d76",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09587631482ca4dc6",
            "private_dns": "ip-172-31-36-231.eu-central-1.compute.internal",
            "private_ip": "172.31.36.231",
            "public_dns": "ec2-18-194-220-171.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.194.220.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0736775bbbf450f1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mysql_security_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3ab54c46",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bfb56431e5885756"
            ]
          },
          "dependencies": [
            "aws_instance.php-fpm_nginx",
            "aws_key_pair.ssh-key",
            "aws_security_group.mysql_security_group",
            "aws_security_group.php-fpm_nginx_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "php-fpm_nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e342d72b12109f91",
            "arn": "arn:aws:ec2:eu-central-1:631156311067:instance/i-0cfed6ea34e1ac40e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfed6ea34e1ac40e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e3728e1c5669443",
            "private_dns": "ip-172-31-43-185.eu-central-1.compute.internal",
            "private_ip": "172.31.43.185",
            "public_dns": "ec2-3-120-132-87.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.132.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09b93f7b20abff163",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "php-fpm_nginx_security_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3ab54c46",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08176a2606a45a852"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.php-fpm_nginx_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:631156311067:security-group/sg-0bfb56431e5885756",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfb56431e5885756",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "3.120.132.87/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql_security_group",
            "name_prefix": null,
            "owner_id": "631156311067",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-69f62d03"
          },
          "dependencies": [
            "aws_instance.php-fpm_nginx",
            "aws_key_pair.ssh-key",
            "aws_security_group.php-fpm_nginx_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "php-fpm_nginx_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:631156311067:security-group/sg-08176a2606a45a852",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08176a2606a45a852",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "php-fpm_nginx_security_group",
            "name_prefix": null,
            "owner_id": "631156311067",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-69f62d03"
          }
        }
      ]
    }
  ]
}